<?xml version="1.0"?>
<package format="2">
    <name>graphite_to_mcap</name>
    <version>0.1.0</version>
    <description>System statistics logger</description>
    <maintainer email="asherikov@yandex.com">Alexander Sherikov</maintainer>
    <license>Apache 2.0</license>

    <export>
        <build_type>cmake</build_type>
    </export>

    <buildtool_depend>cmake</buildtool_depend>
    <build_depend>libboost-dev</build_depend>
    <exec_depend>collectd</exec_depend>
</package>
